--- a/src/main/resources/neoforge-1.21.4/generator.yaml
+++ b/src/main/resources/neoforge-1.21.4/generator.yaml
@@ -82,6 +82,7 @@ base_templates:
     writer: file
     name: "@RESROOT/META-INF/accesstransformer.cfg"
     condition_any:
+      - "${w.hasElementsOfType('endbiome')}"
       - "${w.getGElementsOfType('biome')?filter(e -> e.spawnBiome || e.spawnInCaves || e.spawnBiomeNether || e.hasVines() || e.hasFruits())?size != 0}"
       - "${w.hasElementsOfType('feature')}"
   - template: elementinits/javamodels.java.ftl
