--- a/src/main/resources/neoforge-1.21.1/generator.yaml
+++ b/src/main/resources/neoforge-1.21.1/generator.yaml
@@ -9,3 +9,11 @@ base_templates:
     name: "@SRCROOT/@BASEPACKAGEPATH/mixin/PlayerAnimationMixin.java"
   - template: player_renderer_mixin.java.ftl
     name: "@SRCROOT/@BASEPACKAGEPATH/mixin/PlayerAnimationRendererMixin.java"
+  - template: firstperson/camera_accessor.java.ftl
+    name: "@SRCROOT/@BASEPACKAGEPATH/mixin/CameraAccessor.java"
+  - template: firstperson/entity_render_dispatcher_mixin.java.ftl
+    name: "@SRCROOT/@BASEPACKAGEPATH/mixin/EntityRenderDispatcherMixin.java"
+  - template: firstperson/item_in_hand_renderer_mixin.java.ftl
+    name: "@SRCROOT/@BASEPACKAGEPATH/mixin/ItemInHandRendererMixin.java"
+  - template: firstperson/level_renderer_mixin.java.ftl
+    name: "@SRCROOT/@BASEPACKAGEPATH/mixin/LevelRendererMixin.java"
